[SWOZO-37] generate vm + policies api spec
