# web-app-frontend/src/api/models/CreateVmRequest.ts
@@ -1,0 +1,80 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface CreateVmRequest
+ */
+export interface CreateVmRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateVmRequest
+     */
+    name: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof CreateVmRequest
+     */
+    vcpu: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof CreateVmRequest
+     */
+    ram: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof CreateVmRequest
+     */
+    bandwidth: number;
+}
+
+export function CreateVmRequestFromJSON(json: any): CreateVmRequest {
+    return CreateVmRequestFromJSONTyped(json, false);
+}
+
+export function CreateVmRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateVmRequest {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+        'vcpu': json['vcpu'],
+        'ram': json['ram'],
+        'bandwidth': json['bandwidth'],
+    };
+}
+
+export function CreateVmRequestToJSON(value?: CreateVmRequest | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'name': value.name,
+        'vcpu': value.vcpu,
+        'ram': value.ram,
+        'bandwidth': value.bandwidth,
+    };
+}
+
