# web-app-frontend/src/api/models/EdtiVmRequest.ts
@@ -1,0 +1,80 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface EdtiVmRequest
+ */
+export interface EdtiVmRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof EdtiVmRequest
+     */
+    name?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof EdtiVmRequest
+     */
+    vCpu?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof EdtiVmRequest
+     */
+    ram?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof EdtiVmRequest
+     */
+    bandwidth?: number;
+}
+
+export function EdtiVmRequestFromJSON(json: any): EdtiVmRequest {
+    return EdtiVmRequestFromJSONTyped(json, false);
+}
+
+export function EdtiVmRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): EdtiVmRequest {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'name': !exists(json, 'name') ? undefined : json['name'],
+        'vCpu': !exists(json, 'vCpu') ? undefined : json['vCpu'],
+        'ram': !exists(json, 'ram') ? undefined : json['ram'],
+        'bandwidth': !exists(json, 'bandwidth') ? undefined : json['bandwidth'],
+    };
+}
+
+export function EdtiVmRequestToJSON(value?: EdtiVmRequest | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'name': value.name,
+        'vCpu': value.vCpu,
+        'ram': value.ram,
+        'bandwidth': value.bandwidth,
+    };
+}
+
