# web-app-frontend/src/api/models/PolicyDto.ts
@@ -1,0 +1,98 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    UserDetailsDto,
+    UserDetailsDtoFromJSON,
+    UserDetailsDtoFromJSONTyped,
+    UserDetailsDtoToJSON,
+} from './UserDetailsDto';
+
+/**
+ * 
+ * @export
+ * @interface PolicyDto
+ */
+export interface PolicyDto {
+    /**
+     * 
+     * @type {number}
+     * @memberof PolicyDto
+     */
+    id: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof PolicyDto
+     */
+    policyType: PolicyDtoPolicyTypeEnum;
+    /**
+     * 
+     * @type {UserDetailsDto}
+     * @memberof PolicyDto
+     */
+    user: UserDetailsDto;
+    /**
+     * 
+     * @type {number}
+     * @memberof PolicyDto
+     */
+    value: number;
+}
+
+/**
+* @export
+* @enum {string}
+*/
+export enum PolicyDtoPolicyTypeEnum {
+    Vcpu = 'MAX_VCPU',
+    Ram = 'MAX_RAM',
+    Disk = 'MAX_DISK',
+    Bandwidth = 'MAX_BANDWIDTH'
+}
+
+export function PolicyDtoFromJSON(json: any): PolicyDto {
+    return PolicyDtoFromJSONTyped(json, false);
+}
+
+export function PolicyDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): PolicyDto {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'policyType': json['policyType'],
+        'user': UserDetailsDtoFromJSON(json['user']),
+        'value': json['value'],
+    };
+}
+
+export function PolicyDtoToJSON(value?: PolicyDto | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'policyType': value.policyType,
+        'user': UserDetailsDtoToJSON(value.user),
+        'value': value.value,
+    };
+}
+
