# web-app-frontend/src/api/models/VmDto.ts
@@ -1,0 +1,88 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface VmDto
+ */
+export interface VmDto {
+    /**
+     * 
+     * @type {number}
+     * @memberof VmDto
+     */
+    id: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof VmDto
+     */
+    name: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof VmDto
+     */
+    vcpu: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof VmDto
+     */
+    ram: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof VmDto
+     */
+    bandwidth: number;
+}
+
+export function VmDtoFromJSON(json: any): VmDto {
+    return VmDtoFromJSONTyped(json, false);
+}
+
+export function VmDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): VmDto {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'name': json['name'],
+        'vcpu': json['vcpu'],
+        'ram': json['ram'],
+        'bandwidth': json['bandwidth'],
+    };
+}
+
+export function VmDtoToJSON(value?: VmDto | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'name': value.name,
+        'vcpu': value.vcpu,
+        'ram': value.ram,
+        'bandwidth': value.bandwidth,
+    };
+}
+
