# web-app-frontend/src/api/models/index.ts
@@ -7,10 +7,14 @@ export * from './CourseDetailsDto';
 export * from './CourseSummaryDto';
 export * from './CreateActivityRequest';
 export * from './CreateCourseRequest';
+export * from './CreatePolicyRequest';
 export * from './CreateSandboxEnvironmentRequest';
 export * from './CreateUserRequest';
+export * from './CreateVmRequest';
 export * from './DynamicFieldDto';
 export * from './EditCourseRequest';
+export * from './EditPolicyRequest';
+export * from './EdtiVmRequest';
 export * from './FileDto';
 export * from './FinishServiceModuleCreationRequest';
 export * from './InitFileUploadRequest';
@@ -20,6 +24,7 @@ export * from './LoginRequest';
 export * from './ModifyParticipantRequest';
 export * from './ParameterDescription';
 export * from './ParticipantDetailsDto';
+export * from './PolicyDto';
 export * from './RefreshTokenDto';
 export * from './ReserveServiceModuleRequest';
 export * from './ResetPasswordRequest';
@@ -40,3 +45,4 @@ export * from './UploadAccessDto';
 export * from './UserAdminDetailsDto';
 export * from './UserAdminSummaryDto';
 export * from './UserDetailsDto';
+export * from './VmDto';
